--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+API_FOOTBALL_URL=https://v3.football.api-sports.io
+API_FOOTBALL_SEASON=2024
+API_FOOTBALL_LEAGUE=39
+API_FOOTBALL_TIMEZONE=Europe/London
+API_FOOTBALL_API_KEY=
